--- a/trunk/sim/configure.in.in
+++ b/trunk/sim/configure.in.in
@@ -135,7 +135,7 @@ AC_SUBST(LIB_XSLT)
 ZIP_FLAGS="-j"
 AC_PATH_PROG(ZIP, zip, no)
 if test "x$ZIP" = "xno" ; then
-   AC_MSG_ERROR([Executable zip or jar not found!])
+   AC_MSG_ERROR([Executable zip not found!])
 fi
 AC_SUBST(ZIP)
 AC_SUBST(ZIP_FLAGS)
