Add -fno-exceptions -fno-rtti options when building with MinGW

--- a/branches/0.9.4/admin/acinclude.m4.in
+++ b/branches/0.9.4/admin/acinclude.m4.in
@@ -1078,8 +1078,8 @@ elif test "$kde_use_qt_mac" = "yes"; then
   x_includes=""
   x_libraries=""
 elif test "$kde_use_qt_win" = "yes"; then
-  CXXFLAGS="-mthreads -Wall -O2 -fexceptions -frtti  -DUNICODE -DQT_DLL -DQT_THREAD_SUPPORT -DQT_NO_DEBUG"
-  CFLAGS="$CFLAGS -mthreads -Wall -O2 -fexceptions -DUNICODE -DQT_DLL -DQT_THREAD_SUPPORT -DQT_NO_DEBUG"
+  CXXFLAGS="-mthreads -Wall -O2 -fno-exceptions -fno-rtti  -DUNICODE -DQT_DLL -DQT_THREAD_SUPPORT -DQT_NO_DEBUG"
+  CFLAGS="$CFLAGS -mthreads -Wall -O2 -fno-exceptions -DUNICODE -DQT_DLL -DQT_THREAD_SUPPORT -DQT_NO_DEBUG"
   LDFLAGS="$LDFAGS -no-undefined -Wl,-export-all-symbols -Wl,-enable-runtime-pseudo-reloc -mthreads -Wl,-s -Wl,-subsystem,windows -e __Z19QtWinMainCRTStartupv"
   LIBS="$LIBS -lkernel32 -luser32 -lgdi32 -lcomdlg32 -ladvapi32 -lshell32 -lole32 -loleaut32 -luuid -limm32 -lwinmm -lwsock32 -lwinspool"
   X_PRE_LIBS=""
