add pch for gpg, yahoo and msn fix some vcproj settings (msvcrtd.lib in release - problem) gcc also supports pch - if someone is interested in it, I could help

--- a/trunk/sim/plugins/autoaway/idleui.vcproj
+++ b/trunk/sim/plugins/autoaway/idleui.vcproj
@@ -53,10 +53,7 @@
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
-				PrecompiledHeaderFile=".\$(ConfigurationName)/idleui.pch"
-				AssemblerListingLocation=".\$(ConfigurationName)/"
-				ObjectFile=".\$(ConfigurationName)/"
-				ProgramDataBaseFileName=".\$(ConfigurationName)/"
+				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="4"
@@ -148,17 +145,13 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="2"
-				InlineFunctionExpansion="1"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;IDLEUI_EXPORTS"
 				StringPooling="true"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
-				PrecompiledHeaderFile=".\$(ConfigurationName)/idleui.pch"
-				AssemblerListingLocation=".\$(ConfigurationName)/"
-				ObjectFile=".\$(ConfigurationName)/"
-				ProgramDataBaseFileName=".\$(ConfigurationName)/"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
+				DisableSpecificWarnings="4996"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -176,10 +169,8 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="odbc32.lib odbccp32.lib User32.Lib"
 				OutputFile=".\..\..\Release/idleui.dll"
-				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				ModuleDefinitionFile=".\idleui.def"
-				ProgramDatabaseFile=".\..\..\Release/idleui.pdb"
 				ImportLibrary=".\..\..\Release/idleui.lib"
 				TargetMachine="1"
 			/>
