--- a/trunk/sim/plugins/remote/simremote.vcproj
+++ b/trunk/sim/plugins/remote/simremote.vcproj
@@ -45,17 +45,12 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="1"
-				InlineFunctionExpansion="1"
+				Optimization="2"
 				AdditionalIncludeDirectories="$(QTDIR)\include,..\..\sim,..\.."
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL"
 				StringPooling="true"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
-				PrecompiledHeaderFile=".\../../Release_Wrk/simremote.pch"
-				AssemblerListingLocation=".\../../Release_Wrk/"
-				ObjectFile=".\../../Release_Wrk/"
-				ProgramDataBaseFileName=".\../../Release_Wrk/"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				DisableSpecificWarnings="4996"
@@ -76,10 +71,8 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="odbc32.lib odbccp32.lib"
 				OutputFile=".\..\..\Release\simremote.dll"
-				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				ModuleDefinitionFile=".\simremote.def"
-				ProgramDatabaseFile=".\../../Release/simremote.pdb"
 				SubSystem="2"
 				ImportLibrary=".\../../Release/simremote.lib"
 				TargetMachine="1"
@@ -147,10 +140,7 @@
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
-				PrecompiledHeaderFile=".\../../Debug_Wrk/simremote.pch"
-				AssemblerListingLocation=".\../../Debug_Wrk/"
-				ObjectFile=".\../../Debug_Wrk/"
-				ProgramDataBaseFileName=".\../../Debug_Wrk/"
+				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="4"
