--- a/trunk/sim/plugins/styles/metal/metal.vcproj
+++ b/trunk/sim/plugins/styles/metal/metal.vcproj
@@ -54,10 +54,7 @@
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
-				PrecompiledHeaderFile=".\..\Debug_Wrk/metal.pch"
-				AssemblerListingLocation=".\..\Debug_Wrk/"
-				ObjectFile=".\..\Debug_Wrk/"
-				ProgramDataBaseFileName=".\..\Debug_Wrk/"
+				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="4"
@@ -148,18 +145,14 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="2"
-				InlineFunctionExpansion="1"
 				AdditionalIncludeDirectories="$(QTDIR)\include,..\..\..\sim"
 				PreprocessorDefinitions="NDEBUG;WIN32;_WINDOWS;_USRDLL;metal_EXPORTS;QT_DLL;UNICODE;QT_THREAD_SUPPORT"
 				StringPooling="true"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
-				PrecompiledHeaderFile=".\..\Release_Wrk/metal.pch"
-				AssemblerListingLocation=".\..\Release_Wrk/"
-				ObjectFile=".\..\Release_Wrk/"
-				ProgramDataBaseFileName=".\..\Release_Wrk/"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
+				DisableSpecificWarnings="4996"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -178,7 +171,6 @@
 				IgnoreImportLibrary="true"
 				AdditionalDependencies="$(QTDIR)\lib\$(QTLIB) $(QTDIR)\lib\qtmain.lib $(SolutionDir)$(ConfigurationName)\sim.lib imm32.lib wsock32.lib winmm.lib"
 				OutputFile="../../../Release/plugins/styles/metal.dll"
-				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				ImportLibrary=".\..\Release_Wrk\plugins\style/metal.lib"
 				TargetMachine="1"
