Created a basic builtin logger, which logs errors before plugins are loaded. No more non-descriptive 'Communication with sim failed' bugreports.

--- a/branches/0.9.4/sim/Makefile.am
+++ b/branches/0.9.4/sim/Makefile.am
@@ -10,6 +10,7 @@ libsim_la_SOURCES = \
  aboutdata.cpp \
  ballonmsg.cpp \
  buffer.cpp \
+ builtinlogger.cpp \
  cfg.cpp \
  cmddef.cpp \
  contacts.cpp \
