--- a/branches/0.9.4/sim.vcproj
+++ b/branches/0.9.4/sim.vcproj
@@ -289,6 +289,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\sim\builtinlogger.cpp"
+				>
+			</File>
+			<File
 				RelativePath="sim\cfg.cpp"
 				>
 				<FileConfiguration
@@ -1675,6 +1679,10 @@
 			</File>
 			<File
 				RelativePath="sim\buffer.h"
+				>
+			</File>
+			<File
+				RelativePath=".\sim\builtinlogger.h"
 				>
 			</File>
 			<File
